changed styling of web page

--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Login</a></li>
-
+        <li><a href="Login.html">Login</a></li>
         <li><a href="contact.html" class="active">contact</a></li>
+        <li><a href="admin.html">Admin</a></li>
       </ul>
     </div>
 
@@ -45,7 +45,7 @@
       <div class="leftcol">
         <div class="panel">
           <div class="title">
-            <h1>Contact </h1>
+            <h1 style="color:black">Contact </h1>
             <span>Drop us a line.</span>
           </div>
           <div class="panel">
