--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Login</a></li>
-
+        <li><a href="Login.html">Login</a></li>
         <li><a href="contact.html">contact</a></li>
+        <li><a href="admin.html">Admin</a></li>
       </ul>
     </div>
 
@@ -137,9 +137,7 @@
           }
         }
       </style>
-      </head>
-
-      <body>
+     
         <div class="slideshow-container">
 
           <div class="mySlides fade">
@@ -202,11 +200,11 @@
           <h1>Office Hours</h1>
         </div>
         <div class="content">
-          <h3>Hours: Monday - Friday
+          <h4>Hours: Monday - Friday
             8:00 a.m. - 5:00 p.m.
 
             Phone: 660.562.1127
-            <address>Email: hrwebpg@nwmissouri.edu</address></h3>
+            <address>Email: hrwebpg@nwmissouri.edu</address></h4>
         </div>
       </div>
       <div class="panel marRight30">
@@ -214,8 +212,8 @@
           <h1>Student Employment</h1>
         </div>
         <div class="content">
-          <h3> Northwest Missouri State University 800 University Drive Administrative Building Room #125 Maryville, Mo
-            64468-6001</h3>
+          <h4> Northwest Missouri State University 800 University Drive Administrative Building Room #125 Maryville, Mo
+            64468-6001</h4>
         </div>
       </div>
       <div class="panel">
