--- a/ResetPassword.html
+++ b/ResetPassword.html
@@ -130,7 +130,9 @@ form:after {
 }
 #content form { margin: 0 20px; position: relative }
 #content form input[type="text"],
-#content form input[type="password"] {
+#content form input[type="password"],
+#content form input[type="email"],
+#content form input[type="number"] {
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	-ms-border-radius: 3px;
@@ -155,7 +157,9 @@ form:after {
 	width: 80%;
 }
 #content form input[type="text"]:focus,
-#content form input[type="password"]:focus {
+#content form input[type="password"]:focus
+#content form input[type="email"]:focus
+#content form input[type="number"]:focus {
 	-webkit-box-shadow: 0 0 2px #ed1c24 inset;
 	-moz-box-shadow: 0 0 2px #ed1c24 inset;
 	-ms-box-shadow: 0 0 2px #ed1c24 inset;
@@ -167,6 +171,8 @@ form:after {
 }
 #username { background-position: 10px 10px !important }
 #password { background-position: 10px -53px !important }
+#email { background-position: 10px -90px !important }
+#number919 { background-position: 10px -150px !important }
 #content form input[type="submit"] {
 	background: rgb(254,231,154);
 	background: -moz-linear-gradient(top,  rgba(254,231,154,1) 0%, rgba(254,193,81,1) 100%);
@@ -263,28 +269,6 @@ form:after {
 		
 	<!---header-wrap-End--->
 
-	<div class="menu-wrap">
-		<div class="menu">
-			<ul>
-				
-				<li><a href="about.html">Home</a></li>
-				<li><a href="Login.html" class="active">Login</a></li>
-				<li><a href="contact.html">contact</a></li>
-				<li><a href="admin.html">Admin</a></li>
-			</ul>
-		</div>
-
-		<div class="socia-wrap">
-			<div class="socail">
-				<ul>
-					<li><a href="#"><img src="images/aim.png" alt="" /></a></li>
-					<li><a href="#"><img src="images/facebook.png" alt="" /></a></li>
-					<li><a href="#"><img src="images/twwtter.png" alt="" /></a></li>
-					<li><a href="#"><img src="images/linkedin.png" alt="" /></a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
 	<!---menu-wrap-End--->
 
 	<div class="page-wrap">
@@ -292,38 +276,29 @@ form:after {
 			<div class=" leftcol">
 				<div class="panel">
 					<div class="title">
-						<h1 style="color:black">Login </h1>
-						<span>Login to view/apply the on campus jobs.</span>
+						<h1 style="color:black">Reset Your Password </h1>
 					</div>
 
 					<div class="container">
 						<section id="content">
 							<form action="">
-								<h1>Login Form</h1>
+								<h1>Reset Password</h1>
 								<div>
-									<input type="text" placeholder="Username" required="" id="username" />
+									<input type="email" placeholder="Email" required="" id="username" />
+                                </div>
+                                <div>
+									<input type="password" placeholder=" new Password" required="" id="password" />
+                                </div>
+                                <div>
+									<input type="password" placeholder="Confirm Password" required="" id="password" />
 								</div>
 								<div>
-									<input type="password" placeholder="Password" required="" id="password" />
-								</div>
-								<div>
-									<input type="submit" onclick="login()" value="Log in" />
-									<a href="ResetPassword.html">Reset password?</a>
-									<a href="Register.html">Register</a>
+									<input type="submit" onclick="reset()" value="Submit" />
 									<script>
-										function login() {
-											if((document.getElementById('username').value).length != 0){
-												if((document.getElementById('password').value).length != 0){
-													window.alert("got it");
-													window.location = "job.html";
-												}
-												else{
+										function reset() {
+                                            window.alert("Reset successful");
 
-													window.alert("Enter Password")
-												}
-											}else{
-												window.alert("Enter userName")
-											}
+													window.location = "login.html";
 	
 										}
 									</script>
