--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
   <div class="menu-wrap">
     <div class="menu">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
+
+        <li><a href="about.html" class="active">Home</a></li>
         <li><a href="Login.html">Login</a></li>
         <li><a href="contact.html">contact</a></li>
         <li><a href="admin.html">Admin</a></li>
@@ -39,7 +39,7 @@
 
   </div>
   <!---menu-wrap-End--->
-  
+
   <div class="banner-wrap">
     <div class="banner">
       <div class="leftcol">
@@ -48,15 +48,25 @@
             <h1>About </h1>
             <span>Welcome to Northwest Jobs</span>
           </div>
-      <div class="content">
-        <p>The Northwest Student Employment experience can be both fun and rewarding. It can give you an opportunity to explore and affirm your career choice, as well as gain critical skills that improve your marketability for professional employment. Earning money while going to school helps to finance your education, while providing you with the opportunity to become a valuable part of the campus community.</p>
-        <p>Did you know research indicates that students who work part-time on-campus achieve a higher grade point average and promotes degree completion? Explore the importance of student employment and the many opportunities for learning as you navigate your way through this site.</p>
-      </div>
+          <div class="content">
+            <p>The Northwest Student Employment experience can be both fun and rewarding. It can give you an
+              opportunity to explore and affirm your career choice, as well as gain critical skills that improve your
+              marketability for professional employment. Earning money while going to school helps to finance your
+              education, while providing you with the opportunity to become a valuable part of the campus community.</p>
+            <p>Did you know research indicates that students who work part-time on-campus achieve a higher grade point
+              average and promotes degree completion? Explore the importance of student employment and the many
+              opportunities for learning as you navigate your way through this site.</p>
+          </div>
 
+        </div>
+        <div class="shadow"></div>
+      </div>
+      <div class="rightcol">
+        <video width="100%" height="auto" controls>
+          <source src="Northwest Student Employment.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
-    <div class="shadow"></div>
-  </div>
-  </div>
   </div>
   <!---banner-wrap-End--->
 
