--- a/admin.html
+++ b/admin.html
@@ -315,18 +315,7 @@ form:after {
 						</div><!-- container -->
 						<script>
 							function login() {
-								if ((document.getElementById('username').value).length != 0) {
-									if ((document.getElementById('password').value).length != 0) {
-										window.alert("got it");
-										window.location="adminnav.html";
-									}
-									else {
-
-										window.alert("Enter Password")
-									}
-								} else {
-									window.alert("Enter userName")
-								}
+								window.location="job1apply.html";
 
 							}
 						</script>
