--- a/admin.html
+++ b/admin.html
@@ -315,7 +315,7 @@ form:after {
 						</div><!-- container -->
 						<script>
 							function login() {
-								window.location="job1apply.html";
+								window.location="adminnav.html";
 
 							}
 						</script>
