--- a/job1apply.html
+++ b/job1apply.html
@@ -86,36 +86,38 @@ tr:nth-child(even) {background-color: #f2f2f2;}
                         <table border="0" cellpadding="5" cellspacing="0">
                         <tr> <td style="width: 50%">
                         <label for="First_Name"><b>First name *</b></label><br />
-                        <input name="First_Name" type="text" maxlength="50" style="width: 260px" />
+                        <input name="First_Name" type="text"  placeholder="John" maxlength="50" style="width: 260px" />
                         </td> <td style="width: 50%">
                         <label for="Last_Name"><b>Last name *</b></label><br />
-                        <input name="Last_Name" type="text" maxlength="50" style="width: 260px" />
+                        <input name="Last_Name" type="text"   placeholder="Smith" maxlength="50" style="width: 260px" />
                         </td> </tr> <tr> <td colspan="2">
                         <label for="Email_Address"><b>Email *</b></label><br />
-                        <input name="Email_Address" type="text" maxlength="100" style="width: 535px" />
+                        <input name="Email_Address" type="text" maxlength="100"  placeholder="John.smith@gmail.com" style="width: 535px" />
                         </td> </tr> <tr> <td colspan="2">
-                        <label for="Portfolio"><b>Portfolio website</b></label><br />
-                        <input name="Portfolio" type="text" maxlength="255" value="http://" style="width: 535px" />
+                        <label for="Portfolio"><b>Degree with Major/Minor</b></label><br />
+                        <input name="Portfolio" type="text" maxlength="255"  placeholder="Masters in ACS" style="width: 535px" />
                         </td> </tr> <tr> <td colspan="2">
                         <label for="Position"><b>Position you are applying for *</b></label><br />
-                        <input name="Position" type="text" maxlength="100" style="width: 535px" />
+                        <input name="Position" type="text" maxlength="100"  placeholder=" science Tutor" style="width: 535px" />
                         </td> </tr> <tr> <td>
-                        <label for="Salary"><b>Salary requirements</b></label><br /> <input name="Salary" type="text" maxlength="50" style="width: 260px" /> </td> <td>
-                        <label for="StartDate"><b>When can you start?</b></label><br />
-                        <input name="StartDate" type="text" maxlength="50" style="width: 260px" />
+                        <label for="Salary"><b>Current/Final College GPA</b></label><br /> <input name="Salary"   placeholder="3.5" type="text" maxlength="50" style="width: 260px" /> </td> <td>
+                        <label for="StartDate"><b>Notification Preference</b></label><br />
+                        <input name="StartDate" type="text"  placeholder="email,phone" maxlength="50" style="width: 260px" />
                         </td> </tr> <tr> <td>
                         <label for="Phone"><b>Phone *</b></label><br />
-                        <input name="Phone" type="text" maxlength="50" style="width: 260px" />
+                        <input name="Phone" type="text" maxlength="50" placeholder="(660)5280111" style="width: 260px" />
                         </td> <td>
-                        <label for="Fax"><b>Fax</b></label><br />
-                        <input name="Fax" type="text" maxlength="50" style="width: 260px" />
+                        <label for="Fax"><b>When will you graduate?</b></label><br />
+                        <input name="Fax" type="text" maxlength="50" placeholder="december 2109" style="width: 260px" />
                         </td> </tr> <tr> <td colspan="2">
-                        <label for="Relocate"><b>Are you willing to relocate?</b></label><br />
-                        <input name="Relocate" type="radio" value="Yes" checked="checked" /> Yes      
-                        <input name="Relocate" type="radio" value="No" /> No      
-                        <input name="Relocate" type="radio" value="NotSure" /> Not sure
+                        <label for="Relocate"><b>Gender</b></label><br />
+                        <input name="Relocate" type="radio" value="Male" checked="checked" /> Male      
+                        <input name="Relocate" type="radio" value="Female" /> Female                        
                         </td> </tr> <tr> <td colspan="2">
-                        <label for="Organization"><b>Last company you worked for</b></label><br />
+                        <label for="Organization"><b>Work Experience</b></label><br />
+                        <input name="Organization" type="text" maxlength="100" style="width: 535px" />
+                        </td> </tr> <tr> <td colspan="2">
+                        <label for="Organization"><b>Objective</b></label><br />
                         <input name="Organization" type="text" maxlength="100" style="width: 535px" />
                         </td> </tr> <tr> <td colspan="2">
                         <label for="Reference"><b>Reference / Comments / Questions</b></label><br />
