--- a/Login.html
+++ b/Login.html
@@ -167,7 +167,7 @@ form:after {
 }
 #username { background-position: 10px 10px !important }
 #password { background-position: 10px -53px !important }
-#content form input[type="submit"] {
+#content form input[type="button"] {
 	background: rgb(254,231,154);
 	background: -moz-linear-gradient(top,  rgba(254,231,154,1) 0%, rgba(254,193,81,1) 100%);
 	background: -webkit-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
@@ -196,7 +196,7 @@ form:after {
 	text-shadow: 0 1px 0 rgba(255,255,255,0.5);
 	width: 120px;
 }
-#content form input[type="submit"]:hover {
+#content form input[type="button"]:hover {
 	background: rgb(254,193,81);
 	background: -moz-linear-gradient(top,  rgba(254,193,81,1) 0%, rgba(254,231,154,1) 100%);
 	background: -webkit-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
@@ -307,17 +307,30 @@ form:after {
 									<input type="password" placeholder="Password" required="" id="password" />
 								</div>
 								<div>
-									<input type="submit" onclick="login()" value="Log in" />
+									<input type="button" onclick="login()" value="Log in" />
 									<a href="ResetPassword.html">Reset password?</a>
 									<a href="Register.html">Register</a>
-									<script>
-										function login() {
-											window.location="job.html";
-										}
-									</script>
+									
 
 								</div>
 							</form><!-- form -->
+							<script>
+									function login() {
+										var uName = document.getElementById('username').value
+										var pName = document.getElementById('password').value
+										if(uName.length > 0){
+											if(pName.length > 0){
+												window.location = "job.html";
+											}else{
+												window.alert("Enter Password");
+											}
+
+										}else{
+											window.alert("Enter UserName");
+										}
+										
+									}
+								</script>
 
 						</section><!-- content -->
 					</div><!-- container -->
