--- a/ResetPassword.html
+++ b/ResetPassword.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Northwet Jobs</title>
-	<link href="css/styles.css" rel="stylesheet" type="text/css" />
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-	<style>
-		body {
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Northwet Jobs</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <style>
+        body {
 	background: #DCDDDF url(https://cssdeck.com/uploads/media/items/7/7AF2Qzt.png);
 	color: #000;
 	font: 14px Arial;
@@ -173,7 +173,7 @@ form:after {
 #password { background-position: 10px -53px !important }
 #email { background-position: 10px -90px !important }
 #number919 { background-position: 10px -150px !important }
-#content form input[type="submit"] {
+#content form input[type="button"] {
 	background: rgb(254,231,154);
 	background: -moz-linear-gradient(top,  rgba(254,231,154,1) 0%, rgba(254,193,81,1) 100%);
 	background: -webkit-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
@@ -202,7 +202,7 @@ form:after {
 	text-shadow: 0 1px 0 rgba(255,255,255,0.5);
 	width: 120px;
 }
-#content form input[type="submit"]:hover {
+#content form input[type="button"]:hover {
 	background: rgb(254,193,81);
 	background: -moz-linear-gradient(top,  rgba(254,193,81,1) 0%, rgba(254,231,154,1) 100%);
 	background: -webkit-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
@@ -260,101 +260,117 @@ form:after {
 
 <body>
 
-		<div class="header-wrap">
-				<div class="panel marRight30">
-						<img src="images/logo.png" alt="logo" width="200px" height="150px"><h1>Northwest Jobs</h1>
-					</div>
-			
-		<!---header-wrap-End--->
-		
-	<!---header-wrap-End--->
+    <div class="header-wrap">
+        <div class="panel marRight30">
+            <img src="images/logo.png" alt="logo" width="200px" height="150px">
+            <h1>Northwest Jobs</h1>
+        </div>
 
-	<!---menu-wrap-End--->
+        <!---header-wrap-End--->
 
-	<div class="page-wrap">
-		<div class="wrap3">
-			<div class=" leftcol">
-				<div class="panel">
-					<div class="title">
-						<h1 style="color:black">Reset Your Password </h1>
-					</div>
+        <!---header-wrap-End--->
 
-					<div class="container">
-						<section id="content">
-							<form action="">
-								<h1>Reset Password</h1>
-								<div>
-									<input type="email" placeholder="Email" required="" id="username" />
-                                </div>
-                                <div>
-									<input type="password" placeholder=" new Password" required="" id="password" />
-                                </div>
-                                <div>
-									<input type="password" placeholder="Confirm Password" required="" id="password" />
-								</div>
-								<div>
-									<input type="submit" onclick="reset()" value="Submit" />
-									<script>
-										function reset() {
-                                            window.alert("Reset successful");
+        <!---menu-wrap-End--->
 
-													window.location = "login.html";
-	
-										}
-									</script>
+        <div class="page-wrap">
+            <div class="wrap3">
+                <div class=" leftcol">
+                    <div class="panel">
+                        <div class="title">
+                            <h1 style="color:black">Reaet Password </h1>
+                        </div>
 
-								</div>
-							</form><!-- form -->
+                        <div class="container">
+                            <section id="content">
+                                <form action="">
+                                    <h1>Reset Form</h1>
+                                    <div>
+                                        <input type="email" placeholder="Email" required="" id="email" />
+                                    </div>
+                                    <div>
+                                        <input type="password" placeholder=" new Password" required="" id="password" />
+                                    </div>
+                                    <div>
+                                        <input type="password" placeholder=" confirm Password" required="" id="password1" />
+                                    </div>
 
-						</section><!-- content -->
-					</div><!-- container -->
+                                    <div>
+                                        <input type="button" onclick="register()" value="Reset" />
+                                        <script>
+                                            function register() {
+                                                var a = document.getElementById('email').value;
+                                                var b = document.getElementById('password').value;
+                                                var c = document.getElementById('password1').value;
+                                                if (a.length > 0 && b.length > 0 && c.length > 0) {
+                                                    if (b == c) {
+                                                        window.alert("Reset successful");
+
+                                                        window.location = "login.html";
+                                                    }
+                                                    else{
+                                                        window.alert("Passwords are not equal");
+
+                                                    }
+
+                                                } else {
+                                                    window.alert("Enter all the required fields");
+                                                }
+                                            }
+                                        </script>
+
+                                    </div>
+                                </form><!-- form -->
+
+                            </section><!-- content -->
+                        </div><!-- container -->
 
 
-				</div>
+                    </div>
 
-			</div>
-		</div>
-	</div>
-	<div class="footer-wrap">
-		<div class="wrap">
-			<div class="panel marRight30">
-				<div class="title">
-					<h1>Office Hours</h1>
-				</div>
-				<div class="content">
-					<h3>Hours: Monday - Friday
-						8:00 a.m. - 5:00 p.m.
+                </div>
+            </div>
+        </div>
+        <div class="footer-wrap">
+            <div class="wrap">
+                <div class="panel marRight30">
+                    <div class="title">
+                        <h1>Office Hours</h1>
+                    </div>
+                    <div class="content">
+                        <h3>Hours: Monday - Friday
+                            8:00 a.m. - 5:00 p.m.
 
-						Phone: 660.562.1127
-						<address>Email: hrwebpg@nwmissouri.edu</address></h3>
-				</div>
-			</div>
-			<div class="panel marRight30">
-				<div class="title">
-					<h1>Student Employment</h1>
-				</div>
-				<div class="content">
-					<h3> Northwest Missouri State University 800 University Drive Administrative Building Room #125 Maryville, Mo
-						64468-6001</h3>
-				</div>
-			</div>
-			<div class="panel">
-				<div class="title">
-					<h1>Contact us </h1>
-				</div>
-				<div class="cotact">
-					<ul>
-						<li><img src="images/icon6.png" alt="" />660.562.1140</li>
-						<li><img src="images/icon7.png" alt="" /><a href="pmclain@nwmissouri.edu">pmclain@nwmissouri.edu</a></li>
-						<li><img src="images/icon8.png" alt="" />Paula McLain<br>
-							Coordinator of Student Employment </li>
-					</ul>
-				</div>
-			</div>
-			<div class="clearing"></div>
-		</div>
-	</div>
-	<!---footer-wrap--->
+                            Phone: 660.562.1127
+                            <address>Email: hrwebpg@nwmissouri.edu</address></h3>
+                    </div>
+                </div>
+                <div class="panel marRight30">
+                    <div class="title">
+                        <h1>Student Employment</h1>
+                    </div>
+                    <div class="content">
+                        <h3> Northwest Missouri State University 800 University Drive Administrative Building Room #125
+                            Maryville, Mo
+                            64468-6001</h3>
+                    </div>
+                </div>
+                <div class="panel">
+                    <div class="title">
+                        <h1>Contact us </h1>
+                    </div>
+                    <div class="cotact">
+                        <ul>
+                            <li><img src="images/icon6.png" alt="" />660.562.1140</li>
+                            <li><img src="images/icon7.png" alt="" /><a href="pmclain@nwmissouri.edu">pmclain@nwmissouri.edu</a></li>
+                            <li><img src="images/icon8.png" alt="" />Paula McLain<br>
+                                Coordinator of Student Employment </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="clearing"></div>
+            </div>
+        </div>
+        <!---footer-wrap--->
 </body>
 
 </html>
