--- a/about.html
+++ b/about.html
@@ -9,11 +9,10 @@
 
 <body>
 
-  <div class="header-wrap">
-    <div class="logo">
-      <h1>Northwest Jobs</h1>
-    </div>
-  </div>
+    <div class="header-wrap">
+        <div class="panel marRight30">
+            <img src="images/logoa.png" alt="logo" >
+        </div>
   <!---header-wrap-End--->
 
   <div class="menu-wrap">
@@ -49,68 +48,29 @@
             <span>Welcome to Northwest Jobs</span>
           </div>
           <div class="content">
-            <p>The Northwest Student Employment experience can be both fun and rewarding. It can give you an
+            <h3>The Northwest Student Employment experience can be both fun and rewarding. It can give you an
               opportunity to explore and affirm your career choice, as well as gain critical skills that improve your
               marketability for professional employment. Earning money while going to school helps to finance your
-              education, while providing you with the opportunity to become a valuable part of the campus community.</p>
-            <p>Did you know research indicates that students who work part-time on-campus achieve a higher grade point
+              education, while providing you with the opportunity to become a valuable part of the campus community. Did you know research indicates that students who work part-time on-campus achieve a higher grade point
               average and promotes degree completion? Explore the importance of student employment and the many
-              opportunities for learning as you navigate your way through this site.</p>
+              opportunities for learning as you navigate your way through this site.</h3><br>
+              <video width="100%" height="auto" controls>
+                  <source src="Northwest Student Employment.mp4" type="video/mp4">
+                </video>
           </div>
 
         </div>
         <div class="shadow"></div>
       </div>
-      <div class="rightcol">
-        <video width="100%" height="auto" controls>
-          <source src="Northwest Student Employment.mp4" type="video/mp4">
-        </video>
-      </div>
+      
     </div>
   </div>
   <!---banner-wrap-End--->
-
-  <div class="footer-wrap">
-    <div class="wrap">
-      <div class="panel marRight30">
-        <div class="title">
-          <h1>Office Hours</h1>
-        </div>
-        <div class="content">
-          <h4>Hours: Monday - Friday
-            8:00 a.m. - 5:00 p.m.
-
-            Phone: 660.562.1127
-            <address>Email: hrwebpg@nwmissouri.edu</address></h4>
-        </div>
-      </div>
-      <div class="panel marRight30">
-        <div class="title">
-          <h1>Student Employment</h1>
-        </div>
-        <div class="content">
-          <h4> Northwest Missouri State University 800 University Drive Administrative Building Room #125 Maryville, Mo
-            64468-6001</h4>
-        </div>
-      </div>
-      <div class="panel">
-        <div class="title">
-          <h1>Contact us </h1>
-        </div>
-        <div class="cotact">
-          <ul>
-            <li><img src="images/icon6.png" alt="" />660.562.1140</li>
-            <li><img src="images/icon7.png" alt="" /><a href="pmclain@nwmissouri.edu">pmclain@nwmissouri.edu</a></li>
-            <li><img src="images/icon8.png" alt="" />Paula McLain<br>
-              Coordinator of Student Employment </li>
-          </ul>
-        </div>
-      </div>
-      <div class="clearing"></div>
-    </div>
+  <div class="footer">
+   <p>Northwest Missouri State University
+      800 University Drive | Maryville, MO 64468
+      660.562.1212 | www.nwmissouri.edu</p>
   </div>
-  <!---footer-wrap--->
-
 </body>
 
 </html>
