--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
 
     <div class="header-wrap">
         <div class="panel marRight30">
-            <img src="images/logo.png" alt="logo" width="200px" height="150px"><h1>Northwest Jobs</h1>
-          </div>
+            <img src="images/logoa.png" alt="logo" >
+        </div>
       
     <!---header-wrap-End--->
     
@@ -74,48 +74,11 @@
       </div>
     </div>
   </div>
-
-
-  <div class="footer-wrap">
-    <div class="wrap">
-      <div class="panel marRight30">
-        <div class="title">
-          <h1>Office Hours</h1>
-        </div>
-        <div class="content">
-          <h4>Hours: Monday - Friday
-            8:00 a.m. - 5:00 p.m.
-
-            Phone: 660.562.1127
-            <address>Email: hrwebpg@nwmissouri.edu</address></h4>
-        </div>
-      </div>
-      <div class="panel marRight30">
-        <div class="title">
-          <h1>Student Employment</h1>
-        </div>
-        <div class="content">
-          <h4> Northwest Missouri State University 800 University Drive Administrative Building Room #125 Maryville, Mo
-            64468-6001</h4>
-        </div>
-      </div>
-      <div class="panel">
-        <div class="title">
-          <h1>Contact us </h1>
-        </div>
-        <div class="cotact">
-          <ul>
-            <li><img src="images/icon6.png" alt="" />660.562.1140</li>
-            <li><img src="images/icon7.png" alt="" /><a href="pmclain@nwmissouri.edu">pmclain@nwmissouri.edu</a></li>
-            <li><img src="images/icon8.png" alt="" />Paula McLain<br>
-              Coordinator of Student Employment </li>
-          </ul>
-        </div>
-      </div>
-      <div class="clearing"></div>
-    </div>
-  </div>
-  <!---footer-wrap--->
+  <div class="footer">
+      <p>Northwest Missouri State University
+         800 University Drive | Maryville, MO 64468
+         660.562.1212 | www.nwmissouri.edu</p>
+     </div>
 </body>
 
 </html>
