--- a/job.html
+++ b/job.html
@@ -24,7 +24,7 @@ td {
   padding: 0.5rem; 
   text-align: left;
 }
-tr:hover {background-color:grey;}
+
 tr:nth-child(even) {background-color: #f2f2f2;}
     </style>
 </head>
@@ -33,8 +33,8 @@ tr:nth-child(even) {background-color: #f2f2f2;}
 
 		<div class="header-wrap">
 				<div class="panel marRight30">
-						<img src="images/logo.png" alt="logo" width="200px" height="150px"><h1>Northwest Jobs</h1>
-					</div>
+					<img src="images/logoa.png" alt="logo" >
+				</div>
 			
 		<!---header-wrap-End--->
 		
@@ -139,45 +139,13 @@ tr:nth-child(even) {background-color: #f2f2f2;}
 		</div>
 	</div>
 	<div class="footer-wrap">
-		<div class="wrap">
-			<div class="panel marRight30">
-				<div class="title">
-					<h1>Office Hours</h1>
-				</div>
-				<div class="content">
-					<h3>Hours: Monday - Friday
-						8:00 a.m. - 5:00 p.m.
-
-						Phone: 660.562.1127
-						<address>Email: hrwebpg@nwmissouri.edu</address></h3>
-				</div>
-			</div>
-			<div class="panel marRight30">
-				<div class="title">
-					<h1>Student Employment</h1>
-				</div>
-				<div class="content">
-					<h3> Northwest Missouri State University 800 University Drive Administrative Building Room #125 Maryville, Mo
-						64468-6001</h3>
-				</div>
-			</div>
-			<div class="panel">
-				<div class="title">
-					<h1>Contact us </h1>
-				</div>
-				<div class="cotact">
-					<ul>
-						<li><img src="images/icon6.png" alt="" />660.562.1140</li>
-						<li><img src="images/icon7.png" alt="" /><a href="pmclain@nwmissouri.edu">pmclain@nwmissouri.edu</a></li>
-						<li><img src="images/icon8.png" alt="" />Paula McLain<br>
-							Coordinator of Student Employment </li>
-					</ul>
-				</div>
-			</div>
-			<div class="clearing"></div>
+		
+			<p style="text-align:center">Northwest Missouri State University
+					800 University Drive | Maryville, MO 64468
+					660.562.1212 | www.nwmissouri.edu</p>
+			
 		</div>
-	</div>
-	<!---footer-wrap--->
+	
 </body>
 
 </html>
