--- a/job1apply.html
+++ b/job1apply.html
@@ -54,8 +54,8 @@ tr:nth-child(even) {background-color: #f2f2f2;}
         <div class="socia-wrap">
             <div class="socail">
                 <ul>
-                    <li><a href="#"><img src="images/aim.png" alt="" /></a></li>
-                    <li><a href="#"><img src="images/facebook.png" alt="" /></a></li>
+                    
+                    <li><a href="https://www.facebook.com/Jobs-Northwest-299673893391099/"><img src="images/facebook.png" alt="" /></a></li>
                     <li><a href="#"><img src="images/twwtter.png" alt="" /></a></li>
                     <li><a href="#"><img src="images/linkedin.png" alt="" /></a></li>
                 </ul>
@@ -152,11 +152,7 @@ tr:nth-child(even) {background-color: #f2f2f2;}
         </div>
     </div>
     </div>
-    <div class="footer">
-            <p>Northwest Missouri State University
-               800 University Drive | Maryville, MO 64468
-               660.562.1212 | www.nwmissouri.edu</p>
-           </div>
+    
 </body>
 
 </html>
