--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
     <div class="socia-wrap">
       <div class="socail">
         <ul>
-          <li><a href="#"><img src="images/aim.png" alt="" /></a></li>
-          <li><a href="#"><img src="images/facebook.png" alt="" /></a></li>
+          
+          <li><a href="https://www.facebook.com/Jobs-Northwest-299673893391099/"><img src="images/facebook.png" alt="" /></a></li>
           <li><a href="#"><img src="images/twwtter.png" alt="" /></a></li>
           <li><a href="#"><img src="images/linkedin.png" alt="" /></a></li>
         </ul>
@@ -66,11 +66,7 @@
     </div>
   </div>
   <!---banner-wrap-End--->
-  <div class="footer">
-   <p>Northwest Missouri State University
-      800 University Drive | Maryville, MO 64468
-      660.562.1212 | www.nwmissouri.edu</p>
-  </div>
+  
 </body>
 
 </html>
